
[package]
name = "auto_game"
version = "0.1.0"
edition = "2021"


[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
rand = { version = "0.8.5" }
template-matching = { path = "packege/template-matching-main", features = ["image"] }
rust-paddle-ocr= { path = "packege/rust-paddle-ocr-main" }
serde = { version = "1.0", features = ["derive"] }
config = "0.15"
serde_derive = "1.0.219"
thiserror = "1.0.61"
libloading = "0.7.4"

[lib]
name = "lib"
path = "src/lib.rs"

[[example]]
name = "adb"


