[package]
name = "auto_game"
version = "0.1.0"
edition = "2021"


[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
rand = { version = "0.8.5" }
imageproc = { version = "0.25.0" }
template-matching = { path = "packege/template-matching-main", features = ["image"] }
ndarray = { version = "0.16.0" }
ort = { version = "2.0.0-rc.10", features = ["cuda", "tensorrt", "download-binaries", "copy-dylibs", "half", "load-dynamic"] }
anyhow = "1.0.86"
regex = "1.12.2"
geo-types = "0.7"
geo-clipper = "0.9"

[lib]
name = "lib"
path = "src/lib.rs"

[[example]]
name = "adb"

[[example]]
name = "yolo"


[[example]]
name = "ocr"
